--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "babel-plugin-import": "^1.13.0",
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-util": "^6.2.0",
+    "js-cookie": "^2.2.1",
+    "scryptsy": "^2.1.0",
+    "vant": "^2.2.16",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2",
+    "web3": "0.20.0",
+    "compression-webpack-plugin": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -18,6 +29,10 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1",
+    "style-loader": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
