--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
+    "compression-webpack-plugin": "^3.0.1",
     "core-js": "^3.4.3",
     "ethereumjs-tx": "^1.3.7",
     "ethereumjs-util": "^6.2.0",
+    "ethereumjs-wallet": "^0.6.3",
     "js-cookie": "^2.2.1",
     "scryptsy": "^2.1.0",
     "vant": "^2.2.16",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
-    "web3": "0.20.0",
-    "compression-webpack-plugin": "^3.0.1"
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
